[+] Fixed Pagination for the AuctionsGUI and added Categories for items